--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,7 @@ android:
     # if you need to run emulator(s) during your tests
     #- sys-img-x86-android-26
     #- sys-img-armeabi-v7a-android-17
+    script:
+    - echo "Travis branch is $TRAVIS_BRANCH"
+    - echo "Travis branch is in pull request $TRAVIS_PULL+REQUEST"
+    - mvn clean install -P 'guice'
